// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pragma-alreadyinserted.php - php-verify: pragma-alreadyinserted.php 1`] = `
<?php
/**
 * This already has the pragma, it shouldn't get another.
 *
 * @format
 * @author    Bob Bobberson
 * @copyright Doge Inc. 2018 - All Rights Reserved
 */

echo "Hello World";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
/**
 * This already has the pragma, it shouldn't get another.
 *
 * @format
 * @author    Bob Bobberson
 * @copyright Doge Inc. 2018 - All Rights Reserved
 */

echo 'Hello World';

`;

exports[`pragma-nodocblock.php - php-verify: pragma-nodocblock.php 1`] = `
<?php echo "Hello World";

echo "Hello World";

// non-docblock comment
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
/**
 * @format
 */
echo 'Hello World';

echo 'Hello World';

// non-docblock comment

`;

exports[`pragma-sparsedocblock.php - php-verify: pragma-sparsedocblock.php 1`] = `
<?php
/**
 * This docblock doesn't have any pragma in it yet.
 */

echo "Hello World";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
/**
 * This docblock doesn't have any pragma in it yet.
 * @format
 */

echo 'Hello World';

`;

exports[`pragma-weirddocblock.php - php-verify: pragma-weirddocblock.php 1`] = `
<?php
/** edge case docblock */

echo "Hello World";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
/**
 * edge case docblock
 * @format
 */

echo 'Hello World';

`;

exports[`pragma-weirddocblock-alt.php - php-verify: pragma-weirddocblock-alt.php 1`] = `
<?php
/** @edge 
 * case */

echo "Hello World";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
/** @edge
 * @format
 * case */

echo 'Hello World';

`;

exports[`pragma-withdocblock.php - php-verify: pragma-withdocblock.php 1`] = `
<?php
/**
 * This is a preexisting docblock which will receive a "format" pragma
 *
 * @author    Bob Bobberson
 * @copyright Doge Inc. 2018 - All Rights Reserved
 */

echo "Hello World";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
/**
 * This is a preexisting docblock which will receive a "format" pragma
 *
 * @format
 * @author    Bob Bobberson
 * @copyright Doge Inc. 2018 - All Rights Reserved
 */

echo 'Hello World';

`;
